--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <h3>TESTIMONIALS</h3>
 
             <article class="testimonials-article">
-                <img class="testimonials-image" src="/Users/kenbrunner/Desktop/christianMeixnerFotografie/cmf-website/images/circle-cropped.png" alt="">
+                <img class="testimonials-image" src="images/circle-cropped.png" alt="">
                 <h4 class="testimonials-heading">„EINFACH NUR SUPER MEGA VOLLGEILL!“</h4>
                 <p class="testimonials-parapgraph">Hotels positionieren und verkaufen sich nicht zuletzt über Emotionen. Das ist nicht neu. Das war schon so, als man
                     noch mit Hotelprospekten um die Gunst der Gäste warb. Heute ist es der Gast selbst, welcher online aus einer fast
